# ms-copilot-gateway

./: .dockerignore  .roomodes  Dockerfile  M365_COPILOT_INTEGRATION_PLAN.md  README.md  browser_utils.py  config.py  copilot_client.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.roo/: system-prompt-ms-copilot-gateway-assistant  system-prompt-ms-copilot-gateway-assistant-ja
copilot_clients/: __init__.py  base_client.py  client_factory.py  m365_client.py  standard_client.py
